--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^5.6.0",
     "axios": "^1.7.8",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
